--- a/src/app/components/new-exercise/new-exercise.component.html
+++ b/src/app/components/new-exercise/new-exercise.component.html
@@ -1,13 +1,13 @@
-<ion-content>
-  <div class="go-back-container">
-    <ion-button fill="clear" (click)="goBack()">
-      <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
-      Retour
-    </ion-button>
-  </div>
+  <!-- Bouton Retour -->
+ <ion-content>
+  <h1>Test d'affichage du bouton</h1>
+  <ion-button fill="clear" (click)="goBack()">
+    <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
+    Retour
+  </ion-button>
 
 
-<ion-content>
+
   <!-- Formulaire de création d'un nouvel exercice -->
   <form>
     <ion-item>
@@ -26,21 +26,21 @@
   <hr />
 
   <!-- Sélection d'un exercice existant -->
-<form>
-  <ion-item>
-    <ion-label>Exercice</ion-label>
-    <ion-select [(ngModel)]="selectedWorkoutId" name="selectedWorkoutId">
-      <ion-select-option *ngFor="let workout of workouts" [value]="workout.id">
-        {{ workout.name }}
-      </ion-select-option>
-    </ion-select>
-  </ion-item>
+  <form>
+    <ion-item>
+      <ion-label>Exercice</ion-label>
+      <ion-select [(ngModel)]="selectedWorkoutId" name="selectedWorkoutId">
+        <ion-select-option *ngFor="let workout of workouts" [value]="workout.id">
+          {{ workout.name }}
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
 
-  <ion-item>
-    <ion-label>Durée (min)</ion-label>
-    <ion-input type="number" [(ngModel)]="duration" name="duration"></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label>Durée (min)</ion-label>
+      <ion-input type="number" [(ngModel)]="duration" name="duration"></ion-input>
+    </ion-item>
 
-  <ion-button expand="block" (click)="startExercise()">Démarrer l'exercice</ion-button>
-</form>
-
+    <ion-button expand="block" (click)="startExercise()">Démarrer l'exercice</ion-button>
+  </form>
+</ion-content>
