--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -32,5 +32,14 @@
         Parcourez vos exercices passés et analysez vos progrès.
       </ion-card-content>
     </ion-card>
+    <ion-card routerLink="/timer">
+      <ion-card-header>
+        <ion-card-title>Chronomètre</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        Utilisez le chronomètre pour mesurer le temps de vos exercices.
+      </ion-card-content>
+    </ion-card>
+
   </div>
 </ion-content>
