--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -1,15 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button (click)="goBack()">
-        <ion-icon name="arrow-back-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Statistiques</ion-title>
+      <ion-title>Statistiques</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-button fill="clear" (click)="goBack()">
+    <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
+    Retour
+  </ion-button>
   <ion-card>
     <ion-card-header>
       <ion-card-title>Statistiques Générales</ion-card-title>
