--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -5,10 +5,14 @@
 </ion-header>
 
 <ion-content>
+  <ion-button fill="clear" (click)="goBack()">
+    <ion-icon name="arrow-back-outline" slot="start"></ion-icon>
+    Retour
+  </ion-button>
   <ion-list>
     <ion-item *ngFor="let session of sessions">
       <ion-label>
-        <h2>Exercice : {{ session.workoutId }}</h2>
+        <h2>Exercice : {{ session.workoutName }}</h2>
         <p>Durée : {{ session.duration }} minutes</p>
         <p>Date : {{ session.date | date: 'short' }}</p>
       </ion-label>
